fixing h2 baseline alignment

--- a/app/assets/stylesheets/base/_base.sass
+++ b/app/assets/stylesheets/base/_base.sass
@@ -39,7 +39,7 @@ div.content_block
 
   h2
     position: absolute
-    top: 0
+    top: -0.1em
     -webkit-transform: translateY(-200%)
     transform: translateY(-200%)
 
